--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width" />
 
   <link
-    href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
     rel="stylesheet"
   />
 
@@ -19,36 +19,22 @@
 
   <nav id="navbar">
     <header>JS Documentation</header>
-    <ul>
-      <li><a class="nav-link" href="#Introduction">Introduction</a></li>
-      <li>
-        <a class="nav-link" href="#What_you_should_already_know"
-          >What you should already know</a
-        >
-      </li>
-      <li>
-        <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
-      </li>
-      <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
-      <li><a class="nav-link" href="#Variables">Variables</a></li>
-      <li>
-        <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
-      </li>
-      <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
-      <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
-      <li><a class="nav-link" href="#Constants">Constants</a></li>
-      <li><a class="nav-link" href="#Data_types">Data types</a></li>
-      <li>
-        <a class="nav-link" href="#if...else_statement">if...else statement</a>
-      </li>
-      <li><a class="nav-link" href="#while_statement">while statement</a></li>
-      <li>
-        <a class="nav-link" href="#Function_declarations"
-          >Function declarations</a
-        >
-      </li>
-      <li><a class="nav-link" href="#Reference">Reference</a></li>
-    </ul>
+    <a class="nav-link" href="#Introduction">Introduction</a>
+    <a class="nav-link" href="#What_you_should_already_know"
+      >What you should already know</a
+    >
+    <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+    <a class="nav-link" href="#Hello_world">Hello world</a>
+    <a class="nav-link" href="#Variables">Variables</a>
+    <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+    <a class="nav-link" href="#Variable_scope">Variable scope</a>
+    <a class="nav-link" href="#Global_variables">Global variables</a>
+    <a class="nav-link" href="#Constants">Constants</a>
+    <a class="nav-link" href="#Data_types">Data types</a>
+    <a class="nav-link" href="#if...else_statement">if...else statement</a>
+    <a class="nav-link" href="#while_statement">while statement</a>
+    <a class="nav-link" href="#Function_declarations">Function declarations</a>
+    <a class="nav-link" href="#Reference">Reference</a>
   </nav>
   <main id="main-doc">
     <section id="Introduction" class="main-section">
